15.aug (lv)
      - #5637 support reading bww files: set midi instrument to 72
14.aug (ws)
      - infrastructure for new drumroll editor
      - changed implementation of KeySig + KeySigEvent: do not pack
        all information in subtype()
      (lv)
      - #5637 support reading bww files: line breaks
12.aug (lv)
      - #5637 support reading bww files: TuneTempo
       (ws)
      - new elements TremoloBar, Bend()
11.aug (ws)
      - updated linked parts dialog
      - new shortcut: underscore to enter tenuto articulation
5.aug (la)
      - fix #6479: Crash when closing score during playback
      - fix #6597: Close/reload crash on XP
      - fix cursor move on repeatmeasure in plugin framework
      - fix instrument name containing flats for plugin framework
      - fix #6505: Mixer is not refreshed when scores are switched
3.aug (ws)
      - new context menu for palettes: new function: revert to
        factory settings
29.jul (ws)
      - added google-diff-match-patch library to build
      - implemented basic functionality for linked parts
24.jul (ws)
      - replace buildin DejaVu fonts with FSF freefont
      - new: import of GuitarPro *.gtp *.gp3 *.gp4 *.gp5 files
13.jul (ws)
      - implement playback of hairpins (crescendo/decrescendo)
12.jul (ws)
      - fix #6453: File containing a horizontal frame directly before a bar with a line break cannot be opened
        (la)
      - fix ove charset preferences init (patch by Van Ferry)
10.jul (la)
      - fix : adding notes on voice > 0 from plugin framework
9.jul (ws)
      - play whole chord if note is added
      - new image property: auto scale to fill parent frame
      - new function: add image to frames (from context menu)
7.jul (ws)
      - gonville font integration
6.jul (ws)
      - applied patch from Miwarre: Show/hide courtesy time signature
        and clefs for individual elements
5.jul  (la)
      - fix #6388: Crash on importing a MusicXML file (beam problem)
2.jul (ws)