@@ -1,5 +1,6 @@
 15.aug (lv)
       - #5637 support reading bww files: set midi instrument to 72
+      - #5637 support reading bww files: iotest
 14.aug (ws)
       - infrastructure for new drumroll editor
       - changed implementation of KeySig + KeySigEvent: do not pack
